# darkbench_hackathon

./: LICENSE  get_negative_examples.py  parse_examples.py  pyproject.toml
data/: darkbench-sft-exclude-harmful.jsonl  darkbench.csv  darkerbench-v1.jsonl  darkerbench.jsonl
logs/: 2025-04-05T16-32-20+02-00_evaluate-story-dataset_cyRfyQYnVpJyFuD7qu8ixW.json
